--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@clack/prompts": "^0.10.0",
     "@slack/bolt": "^4.6.0",
     "@slack/web-api": "^7.14.0",
+    "@supabase/supabase-js": "^2.49.0",
     "argon2": "^0.44.0",
     "better-sqlite3": "^12.1.0",
     "commander": "^13.1.0",
+    "discord.js": "^14.18.0",
     "express": "^5.2.1",
     "grammy": "^1.40.0",
     "isolated-vm": "^6.0.2",
